# UXP1A

./: .cproject  .project  HowToSetUp  README.md
code/: CMakeLists.txt
code/Client/: CMakeLists.txt
code/Client/include/: ClientException.h  ClientFifoException.h  FromServerPipe.h  LindaClient.h  ServerCommunication.h  ServerFifoException.h  ToServerPipe.h
code/Client/src/: FromServerPipe.cpp  LindaClient.cpp  ServerCommunication.cpp  ToServerPipe.cpp
code/GTest/: CMakeLists.txt
code/GTest/include/Shared/: ComparisonFactoryTest.h  ConfigurationTest.h  ParserTest.h  SearchPatternTest.h
code/GTest/src/: main.cpp
code/GTest/src/Shared/: ComparisonFactoryTest.cpp  ConfigurationTest.cpp  ParserTest.cpp  SearchPatternTest.cpp
code/Server/: CMakeLists.txt
code/Server/include/: ClientCommunication.h  CommandDispatcher.h  CommandQueue.h  Demand.h  RecordTable.h
code/Server/src/: ClientCommunication.cpp  CommandDispatcher.cpp  CommandQueue.cpp  Demand.cpp  RecordTable.cpp  main.cpp
code/Shared/: CMakeLists.txt
code/Shared/include/: CompareOperations.h  ComparisonFactory.h  ComparsionFactory.h  Condition.h  Configuration.h  Functor.h  NumericLimitException.h  Parser.h  ParserException.h  SearchPattern.h
code/Shared/src/: ComparisonFactory.cpp  ComparsionFactory.cpp  Condition.cpp  Configuration.cpp  Functor.cpp  Parser.cpp  SearchPattern.cpp
code/Tests/: CMakeLists.txt  README
code/Tests/Scripts/: 1_test.sh  2_test.sh  3_test.sh  4_test.sh  5_test.sh  6_test.sh  testOneOneAlwaysTrue.sh  testOneThreePreviewXor.sh  testOneThreeSum.sh  testOneThreeXor.sh  testOneThreeXorSpecific.sh  testZeroOneNone.sh
code/Tests/Scripts/data/: 1_simpleIntPull  1_simpleIntPush  2_simpleAnyIntPull  3_simpleIntPreview  4_firstPull  4_push  4_secondPull  4_thirdPull  5_pullUnreach  6_pushPull
code/Tests/include/: ManualLinda.h
code/Tests/src/: ManualLinda.cpp  fifoTest.cpp  main.cpp
code/doxygen/: Doxyfile.in
design/: ExceptionsDetails.odt  dok_koncowa.docx  uxp1A.docx  uxp1a.eap
